[gd_scene load_steps=7 format=3 uid="uid://cbpueawmxyb1q"]

[ext_resource type="Script" path="res://scripts/wire_box.gd" id="1_7upf0"]
[ext_resource type="Texture2D" uid="uid://0k16b7vialao" path="res://art/box/my_box.png" id="2_wsakq"]
[ext_resource type="Texture2D" uid="uid://csbq0v2002sjb" path="res://art/box/new_their_box.png" id="3_k11pf"]
[ext_resource type="Texture2D" uid="uid://bbv5p63q3fa3g" path="res://art/box/their_box_frame.png" id="4_4s3bd"]
[ext_resource type="Theme" uid="uid://dss4hlpng3bfh" path="res://theme/default.tres" id="4_l6hjn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vdmcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wsakq")
}],
"loop": false,
"name": &"my_box",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_k11pf")
}],
"loop": false,
"name": &"others_box",
"speed": 5.0
}]

[node name="WireBox" type="Panel"]
offset_left = 427.0
offset_top = 613.0
offset_right = 427.0
offset_bottom = 613.0
mouse_filter = 2
script = ExtResource("1_7upf0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.79, 0.79)
sprite_frames = SubResource("SpriteFrames_vdmcb")
animation = &"my_box"

[node name="Wires" type="Node2D" parent="."]

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.79, 0.79)
texture = ExtResource("4_4s3bd")

[node name="ExitButton" type="Button" parent="."]
offset_left = -65.0
offset_top = 280.0
offset_right = 65.0
offset_bottom = 345.0
theme = ExtResource("4_l6hjn")
text = "Exit"

[node name="PlayerName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -340.0
offset_right = 200.0
offset_bottom = -285.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("4_l6hjn")
text = "My Wires"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 175.0
offset_top = -455.0
offset_right = 336.0
offset_bottom = -392.0
text = "set wire"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
